# truck_classification_ml

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/truck_classification_ml/: __init__.py  cli.py
tests/: __init__.py  test_truck_classification_ml.py
