[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "truck_classification_ml"
version = "0.1.0"
description = "Detecting Truck volumes on Roads in Namibia using Imbalanced Classification"
readme = "README.rst"
authors = [
  {name = "Leah Levy", email = ""}
]
maintainers = [
  {name = "Leah Levy", email = ""}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/llevy1/truck_classification_ml/issues"
changelog = "https://github.com/llevy1/truck_classification_ml/blob/master/changelog.md"
homepage = "https://github.com/llevy1/truck_classification_ml"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

